methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:3: error: value rouge is not a member of object java.awt.Color
  growFlowers(Color.rouge)
                    ^